  Angeletti, Alain Frisch, Gabriel Scherer, Jeremy Yallop and Xavier Leroy)

- #11830: Add Type.Id
  (Daniel Bünzli, review by Jeremy Yallop, Gabriel Scherer, Wiktor Kuchta,
   Nicolás Ojeda Bär)

- #11843: Add `In_channel.input_lines` and `In_channel.fold_lines`.
  (Xavier Leroy, review by Nicolás Ojeda Bär and Wiktor Kuchta).

### Other libraries:

- #11374: Remove pointer cast to a type with stricter alignment requirements
  in Windows implementation of Unix.gettimeofday. Windows implementations of
  caml_unix_map_file, caml_unix_lseek and caml_unix_lseek_64 now release the
  runtime lock. Windows implementation of caml_unix_lockf modernised and
  simplified. Where possible, 64 bit integers are used instead of LARGE_INTEGER
  structs.
  (David Allsopp, review by Jonah Beckford and Xavier Leroy)

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

- #11775: Unix.write on a non-blocking socket under Windows will return normally
  if the write blocks after some data has already been written (as otherwise
  there is no way of knowing how much data has been written before
  blocking). The same behaviour was already present under Unix.
  (Nicolás Ojeda Bär, review by David Allsopp)

### Tools:

- #1172: fix ocamlyacc's handling of raw string literals
  (Demi Marie Obenour)

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11166: ocamllex: the union of two character sets "cset1 | cset2" can now be
  used in any context where a character set is expected.
  (Nicolás Ojeda Bär, Martin Jambon, review by Sébastien Hinderer)

- #11773: ocamlyacc: Do not allow quoted literals (such as 'a' or "bc")
  in a token name or %type declaration.  Previously such literals were
  accepted by ocamlyacc, but produced malformed OCaml that was rejected
  by the compiler.
  (Demi Marie Obenour)
